--- a/EasyPayLibrary/EasyPayLibrary.csproj
+++ b/EasyPayLibrary/EasyPayLibrary.csproj
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\NUnit3TestAdapter.3.13.0\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\packages\NUnit3TestAdapter.3.13.0\build\net35\NUnit3TestAdapter.props')" />
+  <Import Project="..\packages\NUnit.3.11.0\build\NUnit.props" Condition="Exists('..\packages\NUnit.3.11.0\build\NUnit.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,11 +11,12 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EasyPayLibrary</RootNamespace>
     <AssemblyName>EasyPayLibrary</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,6 +36,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -51,25 +58,48 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DriverFactory.cs" />
-    <Compile Include="DriverWrapper.cs" />
-    <Compile Include="Pages\BasePageObject.cs" />
-    <Compile Include="Pages\BaseSidebar.cs" />
-    <Compile Include="Pages\GeneralPage.cs" />
-    <Compile Include="Pages\Header.cs" />
-    <Compile Include="Pages\HeaderPOM.cs" />
-    <Compile Include="Pages\HomePage.cs" />
-    <Compile Include="Pages\LoginPage.cs" />
-    <Compile Include="Pages\ProfilePage.cs" />
-    <Compile Include="Pages\UserListRatingItem.cs" />
-    <Compile Include="Pages\WelcomePage.cs" />
+    <Compile Include="Wrappers\ActionsWrapper.cs" />
+    <Compile Include="SidebarAdmin\UtilitiesForm.cs" />
+    <Compile Include="SidebarAdmin\UtilitiesPage.cs" />
+    <Compile Include="HomePages\HomePageAdmin.cs" />
+    <Compile Include="SidebarAdmin\SideBarAdmin.cs" />
+    <Compile Include="InspectorsPage.cs" />
+    <Compile Include="HomePages\HomePageInspector.cs" />
+    <Compile Include="SidebarInspector\ScheduleForm.cs" />
+    <Compile Include="SidebarInspector\SchedulePage.cs" />
+    <Compile Include="SidebarInspector\SideBarInspector.cs" />
+    <Compile Include="HomePages\HomePageManager.cs" />
+    <Compile Include="SidebarManager\InspectorsPage.cs" />
+    <Compile Include="SidebarManager\ManagerForm.cs" />
+    <Compile Include="SidebarManager\SideBarManager.cs" />
+    <Compile Include="SidebarUser\AddressForm.cs" />
+    <Compile Include="SidebarUser\AddressesPage.cs" />
+    <Compile Include="SidebarUser\ConnectedUtilitiesForm.cs" />
+    <Compile Include="SidebarUser\ConnectedUtilitiesPage.cs" />
+    <Compile Include="HomePages\HomePageUser.cs" />
+    <Compile Include="SidebarUser\PaymentsHistoryForm.cs" />
+    <Compile Include="SidebarUser\PaymentsHistoryPage.cs" />
+    <Compile Include="SidebarUser\PaymentsPage.cs" />
+    <Compile Include="SidebarUser\PaymentsPageForm.cs" />
+    <Compile Include="SidebarUser\RateInspectorsForm.cs" />
+    <Compile Include="SidebarUser\RateInspectorsPage.cs" />
+    <Compile Include="SidebarUser\SideBarUser.cs" />
+    <Compile Include="Wrappers\DriverFactory.cs" />
+    <Compile Include="Wrappers\DriverWrapper.cs" />
+    <Compile Include="BasePageObject.cs" />
+    <Compile Include="BaseSidebar.cs" />
+    <Compile Include="GeneralPage.cs" />
+    <Compile Include="Header\Header.cs" />
+    <Compile Include="Login\LoginPage.cs" />
+    <Compile Include="Header\ProfilePage.cs" />
+    <Compile Include="Login\WelcomePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebelementWrapper.cs" />
+    <Compile Include="Wrappers\WebelementWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.73.0.3683.68\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.73.0.3683.68\build\Selenium.WebDriver.ChromeDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -77,5 +107,7 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Selenium.WebDriver.ChromeDriver.73.0.3683.68\build\Selenium.WebDriver.ChromeDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.WebDriver.ChromeDriver.73.0.3683.68\build\Selenium.WebDriver.ChromeDriver.targets'))" />
+    <Error Condition="!Exists('..\packages\NUnit.3.11.0\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit.3.11.0\build\NUnit.props'))" />
+    <Error Condition="!Exists('..\packages\NUnit3TestAdapter.3.13.0\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.3.13.0\build\net35\NUnit3TestAdapter.props'))" />
   </Target>
 </Project>
