--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+E:\Users\MYCOM\EasyPayLibrary\EasyPayTests\Test_Execution_Reports\
