--- a/EasyPayTests/EasyPayTests.csproj
+++ b/EasyPayTests/EasyPayTests.csproj
@@ -96,9 +96,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="RunAllTestsByBrowser.bat" />
     <None Include="RunCriticalFirefox.bat" />
+    <None Include="Run_Inspector_Chrome.bat" />
+    <None Include="Run_Inspector_Firefox.bat" />
     <None Include="Translations\dictionaries\dict.en.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
