--- a/SeleniumExtentReport/packages.config
+++ b/SeleniumExtentReport/packages.config
@@ -8,6 +8,7 @@
   <package id="MongoDB.Driver.Core" version="2.7.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
