--- a/EasyPayTests/App.config
+++ b/EasyPayTests/App.config
@@ -7,7 +7,7 @@
     <add key="Server" value="127.0.0.1"/>
     <add key="Port" value="5432"/>
     <add key="Username" value="postgres"/>
-    <add key="Password" value="admin"/>
+    <add key="Password" value="postgres"/>
     <add key="Database" value="easypay_db"/>
   </appSettings>
   <runtime>
