--- a/EasyPayTests/App.config
+++ b/EasyPayTests/App.config
@@ -1,21 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="URL" value="http://localhost:8080/"/>
-    <add key="browser" value="Chrome"/>
+    <add key="URL" value="http://localhost:8080/" />
+    <add key="browser" value="Chrome" />
     <!--add key="browser" value="Firefox"/-->
-    <add key="Server" value="127.0.0.1"/>
-    <add key="Port" value="5432"/>
-    <add key="Username" value="postgres"/>
-    <add key="Password" value="admin"/>
-    <add key="Database" value="easypay_db"/>
+    <add key="Server" value="127.0.0.1" />
+    <add key="Port" value="5432" />
+    <add key="Username" value="postgres" />
+    <add key="Password" value="postgres" />
+    <add key="Database" value="easypay_db" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0"/>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" /></startup></configuration>
